# alarma_auto_v1

./: .gitignore
sistema-alarma-vehicular/: .gitignore  ANALISIS_MONOREPO.md  CMakeLists.txt  README.md  compilar.cmd
sistema-alarma-vehicular/aplicacion_movil/: README.md
sistema-alarma-vehicular/documentacion/: ARQUITECTURA.md  MANUAL-USUARIO.md
sistema-alarma-vehicular/firmware/auto/: CMakeLists.txt  particiones_ota.csv  sdkconfig.defaults
sistema-alarma-vehicular/firmware/auto/componentes/actuadores/: CMakeLists.txt  vehiculo_actuadores.c  vehiculo_actuadores.h
sistema-alarma-vehicular/firmware/auto/componentes/seguridad/: CMakeLists.txt  vehiculo_seguridad.c  vehiculo_seguridad.h
sistema-alarma-vehicular/firmware/auto/main/: CMakeLists.txt  app_vehiculo.c  app_vehiculo.h  gpio_config.h  main.c
sistema-alarma-vehicular/firmware/compartido/: CMakeLists.txt
sistema-alarma-vehicular/firmware/compartido/include/: config_au915.h  cripto_utils.h  protocolo_seguro.h
sistema-alarma-vehicular/firmware/compartido/src/: config_au915.c  cripto_utils.c  protocolo_seguro.c  rolling_code.c
sistema-alarma-vehicular/firmware/llave/: CMakeLists.txt  particiones.csv  sdkconfig.defaults  secure_boot_signing_key.pem
sistema-alarma-vehicular/firmware/llave/log/: idf_py_stderr_output_8056  idf_py_stdout_output_8056
sistema-alarma-vehicular/firmware/llave/main/: CMakeLists.txt  app_llave.c  app_llave.h  main.c
sistema-alarma-vehicular/herramientas/configuracion/: generar_claves.py
sistema-alarma-vehicular/herramientas/desarrollo/: flashear_llave.cmd
(+3 files in other folders)
