idf_component_register(
    SRCS "app_vehiculo.c"
         "main.c"
    INCLUDE_DIRS "."
    REQUIRES "freertos"
             "esp_system" 
             "esp_timer"
             "esp_wifi"
             "esp_event"
             "nvs_flash"
             "driver"
             "app_update"
             "efuse"
             "esp_hw_support"
             "heap"
             "esp_common"
             "log"
             "soc"
             "hal"
             "spi_flash"
             "compartido"
             "actuadores"
             "sensores"
             "seguridad"
)
